# Map_Editor

./: .gitignore
Map_Editor_BaseCode/Map_Editor_BaseCode/: AbstractLoader.cpp  AbstractLoader.hpp  Arguments.hpp  CMakeLists.txt  CONFIG  Config.cpp  Config.hpp  GameDefinition.cpp  GameDefinition.h  GlobalData.cpp  GlobalData.hpp  Log.cpp  Log.hpp  Map_Editor_BaseCode.cpp  Map_Editor_BaseCode.cppz  Map_Editor_BaseCode.vcxproj  Map_Editor_BaseCode.vcxproj.filters  ReadMe.txt  TechType.cpp  Utils.cpp  Utils.hpp  VariableName.cpp  VariableName.hpp  Windows.h  stdafx.h
Map_Editor_BaseCode/Map_Editor_BaseCode/Editor.Configuration/: ConfigFile.cpp  ConfigFile.hpp  ConfigLoader.cpp  ConfigLoader.hpp
Map_Editor_BaseCode/Map_Editor_BaseCode/Editor.Engine/Basics/: Basic.cpp  Basic.hpp  Lighting.cpp  Lighting.hpp  MapStats.cpp  MapStats.hpp  Ranking.cpp  Ranking.h  SpecialFlag.cpp  SpecialFlag.hpp
Map_Editor_BaseCode/Map_Editor_BaseCode/Editor.Engine/Game/: GameMode.cpp  GameMode.hpp  GameModeCollection.cpp  GameModeCollection.hpp  Theater.cpp  Theater.hpp
Map_Editor_BaseCode/Map_Editor_BaseCode/Editor.Engine/Lists/: AITypeList.h  GroupList.h  IList.h  ListProvider.cpp  ListProvider.h  NothingList.h  ObjectList.h  ScriptList.h  StringList.h  TechnoList.h  TrivialList.h  TypeList.h
Map_Editor_BaseCode/Map_Editor_BaseCode/Editor.Engine/Loading/: GenericLoader.cpp  GenericLoader.h  MapAssetLoader.cpp  MapAssetLoader.hpp  MapLoader.cpp  MapLoader.h  MapLoader.hpp  MapLoaderHelpers.hpp  MapObjectHelper.h  MapObjectLoader.cpp  MapObjectLoader.hpp  StartupLoader.cpp  StartupLoader.hpp  WWLoader.cpp  WWLoader.hpp
Map_Editor_BaseCode/Map_Editor_BaseCode/Editor.Engine/Map/: DigestClass.h  IsoMapPack.cpp  IsoMapPack.hpp  Map.cpp  Map.hpp  OverlayDataPack.cpp  OverlayDataPack.hpp  OverlayPack.cpp  OverlayPack.hpp  PackType.cpp  PackType.hpp  PreviewPack.cpp  PreviewPack.h  Theater.cpp  Theater.hpp  TheaterCollection.cpp  TheaterCollection.hpp  TheaterDefinition.cpp  TheaterDefinition.hpp  TileSet.cpp  TileSet.hpp
Map_Editor_BaseCode/Map_Editor_BaseCode/Editor.Engine/Types/: Aircraft.cpp  Aircraft.hpp  BaseNode.cpp  BaseNode.hpp  House.cpp  House.hpp  Infantry.cpp  Infantry.hpp  Overlay.cpp  Overlay.h  Smudge.cpp  Smudge.hpp  SpecialOverlays.h  Structure.cpp  Structure.hpp  Tube.cpp  Tube.hpp  Unit.cpp  Unit.hpp  VariableName.cpp  VariableName.hpp  Waypoint.cpp  Waypoint.hpp
Map_Editor_BaseCode/Map_Editor_BaseCode/Editor.FileSystem/CsfFile/: CSFEntry.cpp  CSFEntry.hpp  CSFFile.cpp  CSFFile.hpp
Map_Editor_BaseCode/Map_Editor_BaseCode/Editor.FileSystem/EncFile/: EncFile.cpp  EncFile.hpp
Map_Editor_BaseCode/Map_Editor_BaseCode/Editor.FileSystem/FileManager/: BinaryReader.cpp  BinaryReader.hpp  FileSystem.cpp  FileSystem.hpp  FileWriter.cpp  FileWriter.h  RawFileSystem.cpp  RawFileSystem.hpp  TextReader.cpp  TextReader.h
Map_Editor_BaseCode/Map_Editor_BaseCode/Editor.FileSystem/HvaFile/: HVAFile.cpp  HVAFile.hpp
Map_Editor_BaseCode/Map_Editor_BaseCode/Editor.FileSystem/IniFile/: DigestClass.cpp  DigestClass.h  INIFile.cpp  INIFile.hpp  INISection.cpp  INISection.hpp  LineSplitter.cpp  LineSplitter.hpp  sha1.cpp  sha1.h
Map_Editor_BaseCode/Map_Editor_BaseCode/Editor.FileSystem/MapFile/: ActionCollection.cpp  ActionCollection.hpp  ActionTemplate.cpp  ActionTemplate.hpp  ActionType.cpp  ActionType.hpp  Base64.cpp  Base64.hpp  EventCollection.cpp  EventCollection.hpp  EventTemplate.cpp  EventTemplate.hpp  EventType.cpp  EventType.hpp  Format80.cpp  Format80.h  MapMods.cpp  MapMods.h  MapModsHelper.h  MapWriter.cpp  MapWriter.h  ParamCollection.cpp  ParamCollection.hpp  ParamContent.cpp  ParamContent.hpp  ParamType.cpp  ParamType.hpp  SActionCollection.cpp  SActionCollection.hpp  SActionTemplate.cpp  SActionTemplate.hpp  SActionType.cpp  SActionType.hpp  WriterHelper.h  sha1.cpp
Map_Editor_BaseCode/Map_Editor_BaseCode/Editor.FileSystem/MixFile/: Blowfish.hpp  Ccrc.cpp  KeyCalculator.cpp  MixFile.cpp  MixFile.hpp
Map_Editor_BaseCode/Map_Editor_BaseCode/Editor.FileSystem/PaletteFile/: PaletteFile.cpp  PaletteFile.hpp
Map_Editor_BaseCode/Map_Editor_BaseCode/Editor.FileSystem/ShpFile/: Format3.cpp  Format3.hpp  ShpFile.cpp  ShpFile.hpp  ShpImage.cpp  ShpImage.hpp
Map_Editor_BaseCode/Map_Editor_BaseCode/Editor.FileSystem/TmpFile/: TMPFile.cpp  TMPFile.hpp  TMPImage.cpp  TMPImage.hpp
Map_Editor_BaseCode/Map_Editor_BaseCode/Editor.Map.Validator/: AIValidator.cpp  MainValidator.hpp  MiscValidator.cpp  MiscValidator.hpp  ObjectValidator.cpp  ObjectValidator.hpp  OverlayValidator.hpp  TeamValidator.cpp  TeamValidator.hpp  TriggerValidator.cpp  TriggerValidator.hpp  ValidatorHelper.cpp  ValidatorHelper.h
Map_Editor_BaseCode/Map_Editor_BaseCode/Editor.Objects.Westwood/: AbstractType.hpp  AircraftType.cpp  Animation.cpp  Animation.hpp  BuildingType.cpp  BuildingType.hpp  Foundation.cpp  Foundation.hpp  InfantryType.cpp  InfantryType.hpp  ObjectType.hpp  OverlayType.cpp  OverlayType.hpp  OverlayTypeValidator.cpp  OverlayTypeValidator.h  TechnoType.cpp  TechnoType.hpp  TerrainType.hpp  Tiberium.cpp  Vector2D.cpp  Vector2D.hpp  Vector3D.cpp  Vector3D.hpp  VehicleType.hpp
Map_Editor_BaseCode/Map_Editor_BaseCode/Handlers/: INIFileHandler.cpp  INIFileHandler.hpp  MixFileHandler.cpp  MixFileHandler.hpp
Map_Editor_BaseCode/Map_Editor_BaseCode/Loading/: MapAssetLoader.cpp  MapAssetLoader.hpp  MapLoader.cpp  MapLoader.hpp  StartupLoader.cpp  StartupLoader.hpp
Map_Editor_BaseCode/Map_Editor_BaseCode/ObjectTypes/: BuildingType.cpp  BuildingType.hpp  TechType.hpp
Map_Editor_BaseCode/Map_Editor_BaseCode/Reading/: BinaryReader.cpp  BinaryReader.hpp  INIReader.cpp  INIReader.hpp  INISection.cpp  INISection.hpp
(+213 files in other folders)
